--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "boxicons": "^2.1.4",
     "pinia": "^2.0.32",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
@@ -20,7 +21,9 @@
     "@vue/eslint-config-prettier": "^7.1.0",
     "eslint": "^8.34.0",
     "eslint-plugin-vue": "^9.9.0",
+    "node-sass": "^8.0.0",
     "prettier": "^2.8.4",
+    "sass-loader": "^13.2.0",
     "vite": "^4.1.4"
   }
 }
