--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "boxicons": "^2.1.4",
     "pinia": "^2.0.32",
+    "surge": "^0.23.1",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
