--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "pinia": "^2.0.32",
     "surge": "^0.23.1",
     "vue": "^3.2.47",
-    "vue-router": "^4.1.6"
+    "vue-horizontal-scroll": "^0.2.4",
+    "vue-router": "^4.1.6",
+    "vue-scroll-snap": "^0.1.11"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
